force-app/main/default/objects/Pokemon_Trainer__c/Pokemon_Trainer__c.object-meta.xml
<CustomObject>
    <label>Pokemon Trainer</label>
    <nameField>
        <label>Trainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemon Trainers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>