force-app/main/default/objects/Pokemon_Trainer__c/fields/Automation_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Automation_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Automation Opt In</label>
    <type>Checkbox</type>
</CustomField>