force-app/main/default/objects/Pokemon_Trainer__c/fields/Consumed_Encounters__c.field-meta.xml
<CustomField>
    <fullName>Consumed_Encounters__c</fullName>
    <description>Server-side single-use ledger for encounter tokens: one "tokenHash|epochMillis" entry per consumed (caught or fled) encounter, pruned past the 60-minute token TTL. No field permissions on purpose — players never read or write it; only Apex does.</description>
    <label>Consumed Encounters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>