force-app/main/default/objects/Pokemon_Trainer__c/fields/Currency_Today__c.field-meta.xml
<CustomField>
    <fullName>Currency_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Currency Today</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>