force-app/main/default/objects/Pokemon_Trainer__c/fields/Earn_Date__c.field-meta.xml
<CustomField>
    <fullName>Earn_Date__c</fullName>
    <label>Earn Date</label>
    <type>Date</type>
</CustomField>