force-app/main/default/objects/Pokemon_Trainer__c/fields/Experience_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Experience_Tokens__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Experience Tokens</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>