force-app/main/default/objects/Pokemon_Trainer__c/fields/Highest_Level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level__c</fullName>
    <label>Highest Level</label>
    <summarizedField>Pokemon__c.Level__c</summarizedField>
    <summaryForeignKey>Pokemon__c.Pokemon_Trainer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>