force-app/main/default/objects/Pokemon_Trainer__c/fields/Master_Balls__c.field-meta.xml
<CustomField>
    <fullName>Master_Balls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Master Balls</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>