force-app/main/default/objects/Pokemon_Trainer__c/fields/Poke_Balls__c.field-meta.xml
<CustomField>
    <fullName>Poke_Balls__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Poke Balls</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>