force-app/main/default/objects/Pokemon_Trainer__c/fields/Rival__c.field-meta.xml
<CustomField>
    <fullName>Rival__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rival</label>
    <referenceTo>Pokemon_Trainer__c</referenceTo>
    <relationshipLabel>Rivals</relationshipLabel>
    <relationshipName>Rivals</relationshipName>
    <type>Lookup</type>
</CustomField>