force-app/main/default/objects/Pokemon_Trainer__c/fields/Shiny_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Shiny_Pokemon__c</fullName>
    <label>Shiny Pokemon</label>
    <summaryFilterItems>
        <field>Pokemon__c.Is_Shiny__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Pokemon__c.Pokemon_Trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>