force-app/main/default/objects/Pokemon_Trainer__c/fields/Thunder_Stones__c.field-meta.xml
<CustomField>
    <fullName>Thunder_Stones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Thunder Stones</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>