force-app/main/default/objects/Pokemon_Trainer__c/fields/Total_EXP_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_EXP_Points__c</fullName>
    <label>Total EXP Points</label>
    <summarizedField>Pokemon__c.EXP_Points__c</summarizedField>
    <summaryForeignKey>Pokemon__c.Pokemon_Trainer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>