force-app/main/default/objects/Pokemon_Trainer__c/fields/Total_Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Total_Pokemon__c</fullName>
    <label>Total Pokemon</label>
    <summaryForeignKey>Pokemon__c.Pokemon_Trainer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>