force-app/main/default/objects/Pokemon_Trainer__c/fields/Trainer_Key__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Key__c</fullName>
    <externalId>true</externalId>
    <label>Trainer Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>