force-app/main/default/objects/Pokemon_Trainer__c/validationRules/Cannot_Be_Own_Rival.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Be_Own_Rival</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Rival__c)) &amp;&amp; Rival__c = Id</errorConditionFormula>
    <errorDisplayField>Rival__c</errorDisplayField>
    <errorMessage>A Trainer cannot be their own rival.</errorMessage>
</ValidationRule>