force-app/main/default/objects/Pokemon_Trainer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency__c</columns>
    <columns>Experience_Tokens__c</columns>
    <columns>Poke_Balls__c</columns>
    <columns>Great_Balls__c</columns>
    <columns>Ultra_Balls__c</columns>
    <columns>Master_Balls__c</columns>
    <columns>Total_Pokemon__c</columns>
    <columns>Shiny_Pokemon__c</columns>
    <columns>Highest_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>